--- a/app/assets/stylesheets/application/_spot-tile.scss
+++ b/app/assets/stylesheets/application/_spot-tile.scss
@@ -50,9 +50,12 @@ a.spot-tile,
 
 .spot-tile__conditions {
   flex: 1 1 auto;
-  max-width: 80%;
   margin: 0 auto;
   display: flex;
+  width: 100%;
+  margin-left: 10%;
+  padding-left: 6px;
+  padding-right: 6px;
 }
 .spot-tile__condition {
   flex: 1 1 33.33%;
